Changes with mod_fastcgi 2.2.3

 *) Clean up FastCGI application pathnames (e.g. remove duplicate slashes). 
 
 *) Fix bugs that prevented dynamic processes from being shutdown when
    the load subsided.  Lars Heete [heete@do.isst.fhg.de]

 *) Prevent dynamic processes from being scheduled to be started before
    the init-start-delay or restart-delay period expires.  This prevents
	the queuing of process start requests while an application which has
	a long initialization period starts up.

 *) When suexec is enabled, allow the process manager to become root again in
    order to signal applications it spawned.

 *) Change the "server started" log message level from INFO to WARN.

 *) Fix dynamic server "Connection Refused" handling.

 *) Fix demand-based dynamic process spawing (uses a more portable approach).

 *) Add -idle-timeout arg to FastCgiServer, FastCgiExternalServer, and
    FastCgiConfig.  mod_fastcgi will now abort a connection if inactive for
	longer than this period.  It applies to the initiation of connections as
	well (and thus is similar to appConnTimeout).  Default is 30 seconds.

 *) appConnTimeout is 0 by default now resulting in blocking connect()s.  This
    is more platform portable/predicable.

 *) Leave STDOUT and STDERR open to the main server error_log.  This should
    eliminate a pile of protocol errors and having to track down 3rd party
    libs writing to stderr inadvertantly.  This doesn't mean these shouldn't
    be fixed in the application to use the FastCGI I/O, it just allows these
    applications to run when previously they'd crash and burn.

 *) Add the pass-header arg to server directives.

 *) Allow supplementary groups to be passed to spawned FastCGI applications (as
    is done for CGI) - at least until PR2580 is resolved.

 *) Initialize the default (empty) environment in a more socially acceptable
    way.

 *) Miscellaneous doc improvements based on notes I've collected up over the
    last few months.
