@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
-<!-- $Id: mod_fastcgi.html,v 1.13 1999/09/08 03:49:44 roberts Exp $ -->
+<!-- $Id: mod_fastcgi.html,v 1.14 1999/09/19 02:06:59 roberts Exp $ -->
 
 <head>
 <title>Apache module mod_fastcgi</title>
@@ -72,23 +72,23 @@ applications (e.g. for a fcgi-bin directory):</p>
   fastcgi-script</code></p>
 </blockquote>
 
-<p>To configure Apache to handle all files (within the scope of&nbsp; the directive) with
+<p>To configure Apache to handle files (within the scope of&nbsp; the directive) with
 the specified extension(s) as FastCGI applications:</p>
 
 <blockquote>
   <p><code><a href="http://www.apache.org/docs/mod/mod_mime.html#addhandler">AddHandler</a>
-  fastcgi-script .fcg .fcgi .fpl</code></p>
+  fastcgi-script fcg fcgi fpl</code></p>
 </blockquote>
 
 <dl>
   <p>Consult the Apache documentation for more information regarding these and other
   directives which affect request handling (such as <code><a
   href="http://www.apache.org/docs/mod/mod_actions.html#action">Action</a>).</code></p>
-  <p>Dynamic FastCGI applications require the <code>ExecCGI</code> option be enabled in the
-  application's directory.&nbsp; <code>ExecCGI</code> can be enabled using either the <a
-  href="http://www.apache.org/docs/mod/core.html#options"><code>Options</code></a> or <a
-  href="http://www.apache.org/docs/mod/mod_alias.html#scriptalias"><code>ScriptAlias</code></a>
-  directives.&nbsp; </p>
+  <p>Dynamic FastCGI applications require the <code>ExecCGI</code> option be enabled
+  (see the <a
+  href="http://www.apache.org/docs/mod/core.html#options"><code>Options</code></a> 
+  directive) in the
+  application's directory.&nbsp; </p>
   <h2>Notes</h2>
   <p><code>mod_fastcgi</code> logs FastCGI application error (stderr) output to the server
   log associated with the request.&nbsp; Errors reported by the FastCGI process manager,
@@ -351,7 +351,7 @@ the specified extension(s) as FastCGI applications:</p>
   <dd>The minimum total number of dynamic FastCGI application instances allowed to run at any
     one time without being killed off by the process manager (due to lack of demand).</dd>
   <dt><code><b>-multiThreshhold <em>n</b> </em>(50)</code></dt>
-  <dd>An integer between 1 and 100 used to determine whether any one instance of a FastCGI
+  <dd>An integer between 0 and 100 used to determine whether any one instance of a FastCGI
     application should be terminated.&nbsp; If the application has more than one instance
     currently running, this attribute will be used to decide whether one of them should be
     terminated.&nbsp; If only one instance remains, <code>singleTHreshhold</code> is used
@@ -374,13 +374,16 @@ the specified extension(s) as FastCGI applications:</p>
   <dd>The minimum number of seconds between the respawning of failed instances of this
     application.&nbsp; This delay prevents a broken application from soaking up too much of
     the system.</dd>
-  <dt><code><b>-singleThreshhold <em>n</em></b> (10)</code></dt>
-  <dd>An integer between 1 and 100 used to determine whether the last instance of a FastCGI
+  <dt><code><b>-singleThreshhold <em>n</em></b>  (0)</code></dt>
+  <dd>An integer between 0 and 100 used to determine whether the last instance of a FastCGI
     application can be terminated.&nbsp; If the process manager computed load factor for the
     application is lower than the specified threshold, the last instance is terminated. &nbsp;
     In order to make your executables run in the &quot;idle&quot; mode for the long time, you
     would specify value closer to 1, however if memory or CPU time is of primary concern, a
-    value closer to 100 would be more applicable.</dd>
+    value closer to 100 would be more applicable.&nbsp; A value of 0 will
+    prevent the last instance of an application from being terminated; this is
+    the default value, changing it is not recommended (especially if -appConnTimeout
+    is set).</dd>
   <dt><code><b>-startDelay <em>n</em></b> (3 seconds)</code></dt>
   <dd>The number of seconds the web server waits patiently while trying to connect to a
     dynamic FastCGI application.&nbsp; If the interval expires, the process manager is
